fix: update config